<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    tools:context=".OutputActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="430dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView232"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="@+id/age4"
                app:layout_constraintTop_toBottomOf="@+id/age4">

                <EditText
                    android:id="@+id/output_fats"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ContentDescription"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="number"
                    android:longClickable="false"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView233"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="@+id/age6"
                app:layout_constraintTop_toBottomOf="@+id/age6">

                <EditText
                    android:id="@+id/output_carbohydrates"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ContentDescription"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="number"
                    android:longClickable="false"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView234"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="@+id/age5"
                app:layout_constraintTop_toBottomOf="@+id/age5">

                <EditText
                    android:id="@+id/output_proteins"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ContentDescription"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="number"
                    android:longClickable="false"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/age2"
                app:layout_constraintTop_toBottomOf="@+id/age2">

                <EditText
                    android:id="@+id/output_osnovnoy"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ContentDescription"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="number"
                    android:longClickable="false"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/age3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/obshiy"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/age2"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/age2"
                app:layout_constraintTop_toBottomOf="@+id/age3">

                <EditText
                    android:id="@+id/output_obshiy"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/ContentDescription"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="number"
                    android:longClickable="false"
                    android:textAlignment="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/age2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/osnovnoy"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/age6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/carbohydrates"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/age2"
                app:layout_constraintTop_toBottomOf="@+id/cardView234" />

            <TextView
                android:id="@+id/age5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/proteins"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/age2"
                app:layout_constraintTop_toBottomOf="@+id/cardView1" />

            <TextView
                android:id="@+id/age4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fats"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/age2"
                app:layout_constraintTop_toBottomOf="@+id/cardView233" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/back_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>